Able to download clips and merge them with their chat renders
Found out that the ffmpeg command takes alot of memory
Able to delete tmp folders
Properly separating files from each other using folders
Template debug.config.ts file
Fixed some path strings so they'll work with different operating systems
Fixed some bugs

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,8 @@ node_modules
 tokens.json
 streams/
 cache/
-chat_renders/
-frame_count/
 *.mp4
+config/*
+!config/_Config.ts
+!config/template.config.ts
+!config/default.ts
