--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
         "dotenv": "^16.0.0",
         "express": "^4.17.1",
         "node-fetch": "^2.6.7",
-        "tmp-promise": "^3.0.3",
+        "tmp": "^0.2.1",
         "ts-node": "^10.2.1",
         "typescript": "^4.4.3"
     }
